#113 [feat] 테스트 코드 통과