@@ -1,5 +1,6 @@
 package com.asap.server.common.utils;
 
+import com.asap.server.domain.enums.Duration;
 import com.asap.server.service.vo.AvailableDateVo;
 import com.asap.server.service.vo.BestMeetingTimeVo;
 import com.asap.server.service.vo.TimeBlockVo;
@@ -9,6 +10,8 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static com.asap.server.domain.enums.TimeSlot.SLOT_11_00;
@@ -46,15 +49,15 @@ public class SearchBestMeetingTest {
         TimeBlockVo timeBlock5 = new TimeBlockVo(1L, 0, availableDate, SLOT_13_00, users);
         TimeBlockVo timeBlock6 = new TimeBlockVo(1L, 0, availableDate, SLOT_13_30, users);
         TimeBlockVo timeBlock7 = new TimeBlockVo(1L, 0, availableDate, SLOT_14_00, users);
-        List<TimeBlockVo> timeBlocks = List.of(timeBlock, timeBlock2, timeBlock3, timeBlock4, timeBlock5, timeBlock6, timeBlock7);
+        List<TimeBlockVo> timeBlocks = new ArrayList<>(Arrays.asList(timeBlock, timeBlock2, timeBlock3, timeBlock4, timeBlock5, timeBlock6, timeBlock7));
 
         BestMeetingTimeVo bestMeetingTime = new BestMeetingTimeVo(SLOT_11_00, SLOT_13_00, users);
         BestMeetingTimeVo bestMeetingTime2 = new BestMeetingTimeVo(SLOT_11_30, SLOT_13_30, users);
         BestMeetingTimeVo bestMeetingTime3 = new BestMeetingTimeVo(SLOT_12_00, SLOT_14_00, users);
-        List<BestMeetingTimeVo> bestMeetingTimes = List.of(bestMeetingTime, bestMeetingTime2, bestMeetingTime3);
+        List<BestMeetingTimeVo> bestMeetingTimes = new ArrayList<>(List.of(bestMeetingTime, bestMeetingTime2, bestMeetingTime3));
 
         // when
-        List<BestMeetingTimeVo> result = bestMeetingUtil.getBestMeetingTime(timeBlocks);
+        List<BestMeetingTimeVo> result = bestMeetingUtil.getBestMeetingTime(timeBlocks, Duration.TWO_HOUR, 2);
 
         // then
         assertThat(result).isEqualTo(bestMeetingTimes);
